changed emdash to comma

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ footer {
     </p>
 
     <p>
-      Yet their stories are similar when it comes to redemption. Princess Luna is allowed the chance to heal. However, she does not immediately accept forgiveness. Her journey was not just about being redeemed by others, but about learning to forgive herself. Redemption is a journey — an ongoing process of growth, accountability, and healing.
+      Yet their stories are similar when it comes to redemption. Princess Luna is allowed the chance to heal. However, she does not immediately accept forgiveness. Her journey was not just about being redeemed by others, but about learning to forgive herself. Redemption is a journey, an ongoing process of growth, accountability, and healing.
     </p>
 
     <p>
