--- a/index.html
+++ b/index.html
@@ -151,32 +151,34 @@ footer {
     <p>A comparison between Anakin Skywalker and Princess Luna.</p>
 
     <p>
-      Both Anakin Skywalker and Princess Luna fall due to loneliness, not ambition. Their transformation to the dark side is driven not by power, but by emotional vulnerability. Each feels underappreciated, unseen, and fears losing what they love. They are consumed not by evil, but by pain.
+      Villains are known to be portrayed as power hungry and inherently evil. Yet both Darth Vader and Nightmare Moon fall not because of their ambition but because of their pain. Both began as heroic, compassionate characters, yet fall into darkness due to their loneliness, vulnerability, and fear of loss. Their transformation is not driven by desire for domination but by deep emotional scars They are consumed not by evil but by pain. .
     </p>
 
     <p>
-      Luna’s pain came from living in her sister’s shadow for centuries. Celestia would be celebrated for raising the sun while Luna raises the moon in silence. Her sense of invisibility becomes resentment, which leads to obsession. She represents not rebellion, but imbalance. By attempting to create an eternal night, she is seeking to discard the natural harmony between night and day. Similarly, Anakin’s transformation into the dark side disrupts the balance of the Force. His fear-driven choice allows the dark side to plunge the galaxy into tyranny. Both figures, trying to control their pain, instead create chaos.
+      Both Luna and Anakin fall because they feel unseen, unappreciated, and isolated. Luna spends centuries in the shadow of her sister Princess Celestia. Celestia would be celebrated for raising the sun while Luna raises the moon in silence. Tho both of their elements are required for harmony, only one receives their recognition. She does not desire power or control; she seeks admiration and appreciation. Her sense of invisibility becomes resentment, which leads to obsession. She represents not rebellion but imbalance. By attempting to create an eternal night she is seeking to discard the natural harmony between night and day. 
     </p>
 
     <p>
-      Luna and Anakin both begin as heroic figures. They were deeply compassionate and loyal, yet become the villains they once opposed. Ironically, their downfalls only deepen their loneliness. Nightmare Moon becomes isolated for 1,000 years, and Darth Vader is trapped in armor and emotional detachment. Their suffering becomes a self-perpetuating cycle of loneliness.
+    Similarly, Anakin’s transformation into the dark side disrupts the balance of the force. He is born as slave, taken from his mother, and burdened by a prophecy. The fear of Padme’s death causes him to try and control fate itself. Unlike traditional villains, his search for power is not for himself. Yet, like Luna, his actions destroy the very things he wishes to protect. Like Darth Vader he leads the galaxy in tyranny and oppression. Both figures, trying to control their pain, instead creates chaos..
     </p>
 
     <p>
-      Yet their stories are similar when it comes to redemption. Princess Luna is allowed the chance to heal. However, she does not immediately accept forgiveness. Her journey was not just about being redeemed by others, but about learning to forgive herself. Redemption is a journey, an ongoing process of growth, accountability, and healing.
+      Luna and Anakin both begin as heroic figures. They were deeply compassionate and loyal yet became villains they once opposed. Ironically, their downfalls only deepen their loneliness. Nightmare moon becomes isolated for 1000 years and Darth Vader is trapped in armor and is emotionally detached. Their suffering becomes a self-perpetuating cycle of loneliness. Their power becomes a prison, not liberation. 
     </p>
 
     <p>
-      In contrast, Anakin’s redemption only comes in death. His final act of compassion, saving his son, allows him to restore his identity but does not offer him the chance to reflect on his actions or heal. The galaxy remains scarred by his actions, and his redemption comes tragically late. Where Luna’s redemption is restorative, Anakin’s is sacrificial.
-    </p>
+The tragedy of both Anakin and Luna comes from the self-fulfilling prophecy of loneliness. Driven by the fear of being alone, they look for a way to control over the things that cannot be forced: love and devotion. Anakin was tortured by the vision of Padme death, yet by trying to prevent this by mastering life and death in the dark side, he causes her death by being the very thing that breaks her heart. Similarly, Luna’s desire for the night to be loved caused eternal darkness. If she had not been sent to isolation, she would have caused her kingdom to become a baron wasteland. By trying to fix their loneliness, they were sent into their own prisons.     </p>
 
     <p>
-      Both characters are driven by love, yet both have a disordered view of it. Luna believes love should be manifest in admiration and reverence. Anakin equates love with possession and control. In both cases, love becomes something to be grasped rather than shared.
-    </p>
+Yet despite their tragic fall, they are offered a chance at redemption. Their stories, however, unfold in different ways. Princess luna is given forgiveness and communal support. She is allowed the chance to heal. However, she does not immediately accept forgiveness. She struggles with guilt and shame. Her journey was not just about being redeemed by others, but about learning to forgive herself. Redemption is a journey. It’s a journey where you learn to forgive yourself and take accountability of your actions.     </p>
 
     <p>
-      Still, love is what brings them back. Luna is redeemed through her sister’s forgiveness and the support of her community. Anakin is redeemed through the love of his son.
-    </p>
+In contrast, Anakin’s redemption only comes in death. His final act of compassion, saving his son, allows him to restore his identity but does not offer him the chance to reflect on his actions or heal. The galaxy remains scared by his actions and his redemptions come tragically late. Where Luna’s redemption is restorative, Anakin’s is sacrificial. His ending tells a different story; you can change but that doesn’t mean you can reverse wounds.    </p>
+
+
+
+    <p>
+Both characters are driven by love yet both have a disorder view of it. Luna believes love should be about admiration and reverence. When she does not receive this, she equals it with rejection. On the other hand, Anakin equates love with possession and control. His terror of losing Padme leads him to dominate rather than protect, leading him to tyrant, in both cases, love becomes something to be grasped rather than shared. Revaluing how even both powerful emotions can become destructive when ruled with fear and insecurity,     </p>
 
 </div>
 
